User Component backend integration done

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header>
-    <nb-user [name]=FullName title="Front-end developer" [picture]=url [nbContextMenu]="items"
+    <nb-user [name]=FullName [picture]=url [nbContextMenu]="items"
       nbContextMenuTag="my-context-menu">
     </nb-user>
   </nb-layout-header>
