--- a/src/app/main/users/users.component.html
+++ b/src/app/main/users/users.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
   <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input />
 </mat-form-field>
 <table mat-table [dataSource]="dataSource">
   <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchema">
@@ -13,20 +13,37 @@
           {{ element[col.key] }}
         </span>
         <div class="btn-edit" *ngSwitchCase="'isEdit'">
-          <button mat-button (click)="editRow(element)" [disabled]="!editUserPermission">
+          <button
+            mat-button
+            (click)="editRow(element)"
+            [disabled]="!editUserPermission"
+          >
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-button class="button-remove" (click)="deleteRow(element)" [disabled]="!deleteUserPermission">
+          <button
+            mat-button
+            class="button-remove"
+            (click)="deleteRow(element)"
+            [disabled]="!deleteUserPermission"
+          >
             <mat-icon>delete</mat-icon>
           </button>
         </div>
       </div>
       <div [ngSwitch]="col.type" *ngIf="element.isEdit">
         <mat-form-field class="form-input" *ngSwitchDefault>
-          <input [type]="col.type" matInput [(ngModel)]="element[col.key]" [pattern]="col.pattern"
-            [required]="col.required" (change)="inputControl($event,col.key,element.id)" />
+          <input
+            [type]="col.type"
+            matInput
+            [(ngModel)]="element[col.key]"
+            [pattern]="col.pattern"
+          />
         </mat-form-field>
-        <mat-form-field class="form-input select" appearance="fill" *ngSwitchCase="'check'">
+        <mat-form-field
+          class="form-input select"
+          appearance="fill"
+          *ngSwitchCase="'check'"
+        >
           <mat-select matNativeControl required [(ngModel)]="element[col.key]">
             <mat-option *ngFor="let role of roles" [value]="role">
               {{ role }}
@@ -34,8 +51,7 @@
           </mat-select>
         </mat-form-field>
         <div class="btn-edit" *ngSwitchCase="'isEdit'">
-          <button mat-button (click)="editedRow(element)" [disabled]="validationControl(element.id)"
-            >Done</button>
+          <button mat-button (click)="newRow(element)">Done</button>
         </div>
       </div>
     </td>
@@ -43,11 +59,18 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    <td class="mat-cell" colspan="4">
+      No data matching the filter "{{ input.value }}"
+    </td>
   </tr>
 </table>
 <div class="add-icon">
-  <button mat-fab aria-label="add new profile" (click)="addRow()" [disabled]="!addUserPermission">
+  <button
+    mat-fab
+    aria-label="add new profile"
+    (click)="addRow()"
+    [disabled]="!addUserPermission"
+  >
     <mat-icon>add</mat-icon>
   </button>
 </div>
