--- a/src/app/main/products/product-settings/add-change-dialog/add-change-dialog.component.html
+++ b/src/app/main/products/product-settings/add-change-dialog/add-change-dialog.component.html
@@ -1,47 +1,50 @@
 <div class="form-container">
   <h2 mat-dialog-title>Preview Screen</h2>
-  <div class="row">
-    <nb-flip-card style="width: 400px; height: 400px; left: 50px;" [flipped]="flipped">
-      <nb-card-front>
-        <nb-card class="nbCard">
-          <div class="some">
-            <div class="child" style="max-width: 400">
-              <img
-                [src]="productForm.value.url"
-              />
-            </div>
-          </div>
-          <div class="row addToCard">
-            <div class="col-sm-4">
-              <p
-                style="
-                  font-weight: bold;
-                  color: #ff4081;
-                  text-align: center;
-                  font-size: large;
-                "
-              >
-                {{ productForm.value.price}}₺
-              </p>
-            </div>
-            <button mat-flat-button color="accent" class="col-sm-4">
-              Add to card
-            </button>
-          </div>
-        </nb-card>
-      </nb-card-front>
-      <nb-card-back>
-        <nb-card style="min-height: 400px">
-          <nb-card-body>
-            <h4> {{productForm.value.name}}</h4>
-            <hr />
-            <p>
-              {{productForm.value.description}}
-            </p>
-          </nb-card-body>
-        </nb-card>
-      </nb-card-back>
-    </nb-flip-card>
+  <div class="overview row">
+    <nb-flip-card
+    class="col-sm-4"
+    [showToggleButton]="false"
+    [flipped]="flipped"
+  >
+    <nb-card-front>
+      <nb-card>
+        <button
+          class="sideButton"
+          (click)="flipTheCard()"
+        >
+          <mat-icon>fast_forward</mat-icon>
+        </button>
+        <div>
+          <img
+            [src]="productForm.value.url"
+            [alt]="productForm.value.name"
+            style="block-size: fit-content"
+          />
+        </div>
+        <div>
+          <h6 class="prise"> {{productForm.value.price}} ₺ </h6>
+          <button mat-raised-button color="accent" class="addtoCard">
+            Add To Card
+          </button>
+        </div>
+      </nb-card>
+    </nb-card-front>
+    <nb-card-back>
+      <nb-card>
+        <button
+          class="sideButton"
+          (click)="flipTheCard()"
+        >
+          <mat-icon>fast_forward</mat-icon>
+        </button>
+        <nb-card-body>
+          <h4>{{ productForm.value.name}}</h4>
+          <hr />
+          <p>{{ productForm.value.description}}</p>
+        </nb-card-body>
+      </nb-card>
+    </nb-card-back>
+  </nb-flip-card>
   </div>
   <hr />
   <mat-dialog-content style="height: 350px">
